# qt-opengl-bug-minimal

./: CMakeLists.txt  README.md
qt-main/: EditorWidget.cc  EditorWidget.h  FileBrowserWidget.cpp  FileBrowserWidget.h  MainWindow.cpp  MainWindow.h
